css/styles.css
/* Global Layout Set-up */
* {
  box-sizing: border-box;
}

body{
  font-family: 'Inter', sans-serif;
  font-weight: 300;
  margin: 0px;
  display: grid;
  grid-template-columns: 100%;
  grid-template-rows: auto;
  grid-template-areas:
    "header"
    "nav"
    "main";
}

h1, h2 {
  font-weight: 500;
}

h3, h4 {
  font-weight: 400;
}

section {
  padding: 25px;
}

.chart {
  padding: 10px;
}
h4:not(#name) {
  text-transform: uppercase;
}
.chart h4, .stats h4 {
  padding-left: 15px;
}
.widget-container-full,
.widget-container-half {
  width: 90vw;
}

svg {
  max-width:100px;
  fill: purple;
}

img{
  width: 100px;
  border-radius: 50%;
}
/* ------ HEADER ------ */
.header {
  padding: 10px;
  grid-area: header;
  background-color: lavender;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

.header h1 {
  font-size: 1.25rem;
  margin-right: auto
}

.header > * {
  margin: 0 10px;
}

.profile-pic {
  width: 10vw;
  max-width: 75px;
}

.header svg {
  width: 8vw;
  max-width: 50px;
}
#header-alert {
  display:none;
}
header svg, nav svg {
  fill: white;
}
#notifications {
  padding-right: 40px;
  border-right: 2px solid purple;
  display:flex;
  flex-direction: row;

}

#notifications svg:hover{
  animation: swing 1s ease-in-out;
}
@keyframes swing {
  0% { transform: rotate(0deg);}
  20% { transform: rotate(15deg); }
  40% { transform: rotate(-15deg); }
  60% { transform: rotate(5deg); }
  80% { transform: rotate(-5deg); }
  100% { transform: rotate(0deg); }
}

.swing {
  transform-origin: top center;
  animation-name: swing;
}

#header-alert {
  width: 15px;
}

.st0{
  fill:none;
  stroke:purple;
  stroke-width:5;
  ;stroke-miterlimit:10;
}
/* ------ NAVIGATION BAR ------ */
nav {
  grid-area: nav;
  padding: 15px;
  background-color: purple;
  display: flex;
  flex-direction: row;
  justify-content: center;

}
nav a {
  padding: 0 15px;
}

nav svg {
  max-width: 50px
}

/* ------ DASHBOARD & ALERT ------ */

.main-headline {
  padding: 5px 15px 0 15px;
}

.alert {
  margin: 10px auto;
  padding: 0 10px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  text-align: center;
  width: 90%;
  border-radius: 10px;
  color: white;
  background-color: purple;
}

.alert p {
  font-size: .9rem;
}
ul  {
  display: flex;
  justify-content: space-around;
  list-style: none;
}

/* ------ CHARTS SECTIONS ------ */

.traffic, .daily, .mobile {
  border-bottom: 1px solid lavender;
}

.traffic widget-container-full, .daily

ul {
  padding-left: 0px;
}
ul li {
  padding: 10px;
}
.active {
  border-radius: 50px;
  background-color: forestgreen;
  color: white;
}

/* ------ SOCIAL ------ */

.stats {
  border-bottom: 1px solid lavender;
}
.social {
  display: flex;
  flex-direction: row;
  border: 1px solid gray;
  background-color: lavender;
  border-radius: 10px;
  margin: 1rem 0;
}
.social-img{
  align-self: center;
  padding-left: 10px;
}

.social-img svg {
  width: 75px;
}

.social-stats {
  padding: 20px;
  display: flex;
  flex-direction: column;
}
.social-stats p:first-child{
  color: purple;
  margin: 0 10px;
}
.social-stats p:last-child{
  margin:0 10px;
  font-size: 2.5rem;
}

/* ------ MEMBERS & ACTIVITY ------ */

.members, .activity {
  background-color: lavender;
  display: flex;
  flex-direction: column;
  border-bottom: 1px solid white;
}

.members-container, .activity-container {
  padding: 20px;
  text-align: center;
  border-bottom: 1px solid white;

}

.members-container:last-child,
.activity-container:last-child {
  padding-bottom: 0px;
  border-bottom: 0px;
}

/* ------ CONTACT ------ */
.contact {
  border-bottom: 1px solid lavender;
}
form {
  display: flex;
  flex-direction: column;
  border-radius: 10px;
}

input[type="text"], select {
  margin: 10px 0;
  padding: 1rem;
  border: 1px solid maroon;
  border-radius: 5px;
}

textarea {
  margin: 10px 0;
  padding: .5rem;
  border: 1px solid;
  border-radius: 5px;
}

button {
  margin: 10px 0;
  height: 3rem;
  border-radius: 10px;
  color: white;
  background-color: purple;
}

/* ------ SETTINGS ------ */

.switch-light {
  display: flex;
  flex-direction: row;
  align-items: center;
  margin: 2.5rem 0;
}
#toggle1, #toggle2 {
  margin-left: auto;
  width: 100px;
}

#timezone {
  width: 100%;
  margin-top: 25px;
}
.settings-button {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}
 .settings button {
   width: 45%;
 }

 .button-disabled {
   background-color: lightgray;
 }

 /* ------ TABLET MEDIA QUERY ------ */

@media screen and (min-width:768px) {
  body {
     grid-template-columns: 7vw auto;
     grid-template-rows: auto;
     grid-template-areas:
     'header header'
     'nav main';
   }
   .header h1 {
     font-size: 2rem;
     margin-right: auto
   }

   .header > * {
     margin: 0 25px;
   }

   main {
     display: grid;
     grid-auto-columns: 1fr 1fr;
   }
   .chart, .stats {
     padding: 20px 0;
   }
   .main-headline, #alert, .main-headline,  .main-dashboard, .alert, .traffic, .stats, .activity, .members, .contact, .settings {
     grid-column: 1 / span 2;
   }

   .daily {
     grid-column: 1 / span 1;
   }

   .mobile {
     grid-column: 2 / span 1;
   }
   .widget-container-full {
     width: 88vw;
     margin: auto;
   }
   .widget-container-half {
     width: 45vw;
   }
   nav {
     display: flex;
     flex-direction: column;
     justify-content: start;
     align-items: center;
   }
   nav svg {
     width: 60px;
     padding: 10px;
   }

   .dashboard {
     padding-left: 2rem;
   }

   .traffic-header {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
   }
   ul li {
     padding: 15px;
     margin: 5px;
   }
   .social-container {
     display: flex;
     flex-direction: row;
     justify-content: center;
     }
   .social-img svg {
     width: 50px
   }
   .social {
     width: 28vw;
     padding: 10px 15px;
     flex-direction: row;
     margin: 5px;
   }
   .social-stats {
     padding: 10px 0;
   }
   .social-stats p:last-child{
     font-size: 2rem;
   }
   .members, .activity{
     padding: 15px;
   }
   .members-container, .activity-container {
     display:flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
     height: 12vw;
   }

   .members-text, .activity-text {
     padding: 0 15px;
   }

   .members-text > *, .activity-text > * {
     text-align: left;
   }

   .members-container p {
     margin-left: auto;
   }
   .contact, .settings {
     width: 45vw;
   }

   select {
     width: 100%;
   }
}
@media screen and (min-width:1024px) {
  .members, .contact {
    grid-column: 1 / span 1;
  }

  .activity, .settings {
    grid-column: 2 / span 1;
  }

  nav svg {
    max-width: 100px;
  }
  .mobile {
      border-left: 1px solid lavender;
    }
    .activity {
    border-left: 1px solid #fff;
  }
}

